--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "express-validator": "^7.2.0",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.10.0",
-        "passport": "^0.7.0",
-        "passport-github-oauth20": "^1.0.4",
+        "node-fetch": "^3.3.2",
         "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
